syntax = "proto3";

package rules;

import "expression.proto";

message PatternRule {
    int32 max_delta_time = 1;
    int32 max_count = 2;
    Expression expression = 3;
}
